# paste-client

./: Cargo.toml  README.md  install.sh  uninstall.sh
src/: config.rs  main.rs
