[package]
name = "paste-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
dotenv = "0.15.0"
toml = "0.5.8"
clap = "2.33.3"
serde = "1.0.130"
serde_derive = "1.0.130"