[package]
name = "paste-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
toml = "0.5.8"
clap = { version = "3.1.0", features = ["derive"] }
serde = "1.0.136"
serde_derive = "1.0.136"