[package]
name = "paste-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-stream = "0.3"
clap = { version = "4", features = ["derive"] }
home = "0.5"
indicatif = "0.17"
mime_guess = "2"
reqwest = { version = "0.11", features = ["stream", "json", "multipart"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }
toml = "0.5"
url = "2"